--- a/notebooks/BuildInstall.ipynb
+++ b/notebooks/BuildInstall.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Getting Started\n",
     "\n",
-    "The training will run a simplified cycled data assimilation workflow using **FV3** and **GSI** from the **rrfs-workflow repository**. These executables have been built on NOAA's RDHPCS **Hera** platform and are available for common use. There is no need to repeat the process for the purposes of this tutorial.\n",
+    "The training will run a simplified cycled data assimilation workflow using **FV3** and **GSI** from the **rrfs-workflow repository**. These executables have been built on NOAA's RDHPCS **Hera** platform and are available for common use. There is no need to repeat the build process for the purposes of this tutorial.\n",
     "\n",
     "For posterity, the build process is documented at the end of this page.  "
    ]
@@ -32,16 +32,7 @@
    "source": [
     "%%bash\n",
     "git clone https://github.com/christinaholtNOAA/uwtools_training\n",
-    "cd uwtools_training\n",
-    "dvc pull"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e10413dc-1314-4850-8ff8-7495cb8ed682",
-   "metadata": {},
-   "source": [
-    "The `uwtools_training` repository is `dvc` enabled (__[DVC docs](https://dvc.org/doc)__), which means that it will pull in the rrfs-workflow fix files, input data for the case study we will run, and the pre-built executables when you run these commands on Hera. The process may take a couple of minutes to complete.  "
+    "cd uwtools_training"
    ]
   },
   {
@@ -51,7 +42,7 @@
    "source": [
     "# Using the pre-installed conda environment\n",
     "\n",
-    "The following procdured will need to be run at the beginning of any new shell environment. If the user environment already has a conda environment loaded in .rc file, it will likely cause conflicts and will need to be unloaded prior to opening a new bash session.\n"
+    "The following procedure will need to be run at the beginning of any new shell environment. If the user environment already has a conda environment loaded in .rc file, it will likely cause conflicts and will need to be unloaded prior to opening a new bash session.\n"
    ]
   },
   {
@@ -64,7 +55,16 @@
     "%%bash\n",
     "source /scratch3/BMC/wrfruc/cholt/conda/etc/profile.d/conda.sh\n",
     "conda activate\n",
-    "conda activate DEV-uwtools # This will needf to change before the tutorial!"
+    "conda activate DEV-uwtools # This will need to change before the tutorial!\n",
+    "dvc pull"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e10413dc-1314-4850-8ff8-7495cb8ed682",
+   "metadata": {},
+   "source": [
+    "The `uwtools_training` repository is `dvc` enabled (__[DVC docs](https://dvc.org/doc)__), which means that it will pull in the `rrfs-workflow` fix files, input data for the case study we will run, and the pre-built executables when you run these commands on Hera. The process may take a couple of minutes to complete.  "
    ]
   },
   {
