Removes dvc artifacts and updates RunningDrivers notebook. (#3)
After removing the DVC artifacts with dvc destroy, I tested the new configs that now point to locations on disk using the RunningDrivers notebook, and updated it to actually run the drivers. I also added a section on running with the API.

Also added CODEOWNERS file.



Co-authored-by: Paul Madden <136389411+maddenp-cu@users.noreply.github.com>

--- a/notebooks/BuildInstall.ipynb
+++ b/notebooks/BuildInstall.ipynb
@@ -31,17 +31,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "git clone https://github.com/christinaholtNOAA/uwtools_training\n",
-    "cd uwtools_training\n",
-    "dvc pull"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e10413dc-1314-4850-8ff8-7495cb8ed682",
-   "metadata": {},
-   "source": [
-    "The `uwtools_training` repository is `dvc` enabled (__[DVC docs](https://dvc.org/doc)__), which means that it will pull in the rrfs-workflow fix files, input data for the case study we will run, and the pre-built executables when you run these commands on Hera. The process may take a couple of minutes to complete.  "
+    "git clone https://github.com/christinaholtNOAA/uwtools_training"
    ]
   },
   {
@@ -108,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
