Small copy editing updates. (#4)

--- a/notebooks/Rocoto.ipynb
+++ b/notebooks/Rocoto.ipynb
@@ -5,7 +5,7 @@
    "id": "2cacb2d9-3686-4381-b104-811cd19c0d92",
    "metadata": {},
    "source": [
-    "# Configuring Rocoto Workflows\n",
+    "# Configuring Rocoto workflows\n",
     "\n",
     "The `uw rocoto` tool has three modes:\n",
     "\n",
