--- a/notebooks/BuildInstall.ipynb
+++ b/notebooks/BuildInstall.ipynb
@@ -6,7 +6,7 @@
    "id": "ff173512-5f06-444f-a9ea-3d7ccc91b419",
    "metadata": {},
    "source": [
-    "# Getting Started\n",
+    "# Getting started\n",
     "\n",
     "The training will run a simplified cycled data assimilation workflow using **FV3** and **GSI** from the **rrfs-workflow repository**. These executables have been built on NOAA's RDHPCS **Hera** platform and are available for common use. There is no need to repeat the process for the purposes of this tutorial.\n",
     "\n",
@@ -41,7 +41,7 @@
    "source": [
     "# Using the pre-installed conda environment\n",
     "\n",
-    "The following procdured will need to be run at the beginning of any new shell environment. If the user environment already has a conda environment loaded in .rc file, it will likely cause conflicts and will need to be unloaded prior to opening a new bash session.\n"
+     "Run the following commands in a fresh bash shell to activate the conda environment for the training. If another conda is already activated (for example via login scripts), unload it first.\n"
    ]
   },
   {
@@ -54,7 +54,7 @@
     "%%bash\n",
     "source /scratch3/BMC/wrfruc/cholt/conda/etc/profile.d/conda.sh\n",
     "conda activate\n",
-    "conda activate DEV-uwtools # This will needf to change before the tutorial!"
+    "conda activate DEV-uwtools # This will need to change before the tutorial!"
    ]
   },
   {
