Rename uw_configs -> configs (#5)

--- a/notebooks/Rocoto.ipynb
+++ b/notebooks/Rocoto.ipynb
@@ -30,8 +30,8 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "# IN BASH: export configs=/path/to/uwtools_training/uw_configs\n",
-    "os.environ[\"configs\"] = str(Path(\".\").resolve().parent / \"uw_configs\")"
+    "# IN BASH: export configs=/path/to/uwtools_training/configs\n",
+    "os.environ[\"configs\"] = str(Path(\".\").resolve().parent / \"configs\")"
    ]
   },
   {
