--- a/notebooks/RunningDrivers.ipynb
+++ b/notebooks/RunningDrivers.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "%%script bash -l\n",
     "args=(\n",
-    "    -c $uw_training/uw_configs/prepare_bcs.yaml\n",
+    "    -c $uw_training/configs/prepare_bcs.yaml\n",
     "    --key-path make_ics\n",
     "    --cycle 2025-08-27T12\n",
     "    --leadtime 0\n",
@@ -79,7 +79,7 @@
     "use_uwtools_logger()\n",
     "\n",
     "ics = ChgresCube(\n",
-    "    config=Path(uw_training, \"uw_configs\", \"prepare_bcs.yaml\"),\n",
+    "    config=Path(uw_training, \"configs\", \"prepare_bcs.yaml\"),\n",
     "    cycle=cycle,\n",
     "    leadtime=timedelta(hours=0),\n",
     "    key_path=[\"make_ics\"],\n",
@@ -137,7 +137,7 @@
     "%%script bash -l\n",
     "for i in $(seq 0 6) ; do \n",
     "  args=(\n",
-    "      -c $uw_training/uw_configs/prepare_bcs.yaml\n",
+    "      -c $uw_training/configs/prepare_bcs.yaml\n",
     "      --key-path make_lbcs\n",
     "      --cycle 2025-08-27T12\n",
     "      --leadtime $i\n",
@@ -164,7 +164,7 @@
    "source": [
     "%%script bash -l\n",
     "args=(\n",
-    "  -c $uw_training/uw_configs/fv3_config.yaml\n",
+    "  -c $uw_training/configs/fv3_config.yaml\n",
     "  --key-path forecast_prod\n",
     "  --cycle 2025-08-27T12\n",
     "  --batch \n",
@@ -194,7 +194,7 @@
     "%%script bash -l\n",
     "# The notebook has a hard time displaying the output in a timely manner for the number of links required by GSI. Pipe to a file on disk.\n",
     "args=(\n",
-    "    -c $uw_training/uw_configs/gsi_uw_config.yaml\n",
+    "    -c $uw_training/configs/gsi_uw_config.yaml\n",
     "    --key-path analysis\n",
     "    --cycle 2025-08-27T13\n",
     "    --batch\n",
@@ -245,7 +245,7 @@
    "outputs": [],
    "source": [
     "%%script bash -l\n",
-    "$uw_training/scripts/run_forecast.sh $uw_training/uw_configs/fv3_config.yaml 2025-08-27T13"
+    "$uw_training/scripts/run_forecast.sh $uw_training/configs/fv3_config.yaml 2025-08-27T13"
    ]
   },
   {
