--- a/notebooks/YAML.ipynb
+++ b/notebooks/YAML.ipynb
@@ -13,7 +13,7 @@
    "id": "e9402c4d-d9f5-4b65-a88c-86f7aabfb065",
    "metadata": {},
    "source": [
-    "Set up our `PATH` so we can use the `demo` script:"
+    "Set up our `PATH` so we can use the `realize` script:"
    ]
   },
   {
@@ -26,7 +26,8 @@
     "import os\n",
     "d = \"../bin\"\n",
     "if d not in os.environ[\"PATH\"].split(\":\"):\n",
-    "    os.environ[\"PATH\"] += f\":{d}\""
+    "    os.environ[\"PATH\"] += f\":{d}\"\n",
+    "os.chdir(\"../configs\")"
    ]
   },
   {
@@ -58,7 +59,7 @@
       "  e: 2.718\n",
       "  pi: *pi\n",
       "\n",
-      "+ uw config realize -i ../configs/tt00.yaml\n",
+      "+ uw config realize -i tt00.yaml\n",
       "pi: 3.142\n",
       "constants:\n",
       "  e: 2.718\n",
@@ -105,7 +106,7 @@
       "  <<: *d\n",
       "  kind: berry\n",
       "\n",
-      "+ uw config realize -i ../configs/tt01.yaml\n",
+      "+ uw config realize -i tt01.yaml\n",
       "math:\n",
       "  e: 2.718\n",
       "  pi: 3.142\n",
@@ -157,7 +158,7 @@
       "  10m_u_component_of_wind:\n",
       "    name: UGRD\n",
       "\n",
-      "+ uw config realize -i ../configs/tt02.yaml\n",
+      "+ uw config realize -i tt02.yaml\n",
       "defaults:\n",
       "  10m_u_component_of_wind:\n",
       "    level_type: heightAboveGround\n",
@@ -187,7 +188,7 @@
    "source": [
     "## Jinja2 Expressions\n",
     "\n",
-    "The [Jinja2 templating language](https://jinja.palletsprojects.com/en/stable/intro/) lends significant power to the `uwtools` config and `template` modes, supporting hierarchical variable references, computation of values, generation of content with loops, and transformation of values with filters.\n",
+    "The [Jinja2 templating language](https://jinja.palletsprojects.com/en/stable/intro/) lends significant power to the `uwtools` `config` and `template` modes, supporting hierarchical variable references, computation of values, generation of content with loops, and transformation of values with filters.\n",
     "\n",
     "Here, `uwtools` empowers Jinja2 to refer to values within the YAML document to compute the number of points in a 3D data cube:"
    ]
@@ -211,7 +212,7 @@
       "  nlev: 127\n",
       "  points: '{{ const.nx * const.ny * nlev }}'\n",
       "\n",
-      "+ uw config realize -i ../configs/tt03.yaml\n",
+      "+ uw config realize -i tt03.yaml\n",
       "const:\n",
       "  nx: 1440\n",
       "  ny: 721\n",
@@ -257,7 +258,7 @@
       "\n",
       "leadtimes: '{% for n in range(6, 25, 6) %}{{ \"%03d\" % n }},{% endfor %}'\n",
       "\n",
-      "+ uw config realize -i ../configs/tt04.yaml\n",
+      "+ uw config realize -i tt04.yaml\n",
       "leadtimes: 006,012,018,024,\n"
      ]
     }
@@ -297,7 +298,7 @@
       "model_name: FV3\n",
       "variable_name: '{{ model_name | lower }}'\n",
       "\n",
-      "+ uw config realize -i ../configs/tt05.yaml\n",
+      "+ uw config realize -i tt05.yaml\n",
       "model_name: FV3\n",
       "variable_name: fv3\n"
      ]
@@ -337,7 +338,7 @@
       "points: !int '{{ nx * ny * nlev }}'\n",
       "leadtimes: !list '[{% for n in range(6, 25, 6) %}{{ n }},{% endfor %}]'\n",
       "\n",
-      "+ uw config realize -i ../configs/tt06.yaml\n",
+      "+ uw config realize -i tt06.yaml\n",
       "nlev: 127\n",
       "nx: 1440\n",
       "ny: 721\n",
@@ -380,7 +381,7 @@
       "leadtime: !timedelta 6\n",
       "first_forecast_validtime: !datetime '{{ cycle + leadtime }}'\n",
       "\n",
-      "+ uw config realize -i ../configs/tt07.yaml\n",
+      "+ uw config realize -i tt07.yaml\n",
       "cycle: 2025-09-24T12:00:00\n",
       "leadtime: !timedelta '6:00:00'\n",
       "first_forecast_validtime: 2025-09-24T18:00:00\n"
@@ -423,7 +424,7 @@
       "\n",
       "rundir: '{{ \"HOME\" | env }}/run'\n",
       "\n",
-      "+ uw config realize -i ../configs/tt08.yaml\n",
+      "+ uw config realize -i tt08.yaml\n",
       "rundir: /home/Paul.Madden/run\n"
      ]
     }
