Add ConfigIntro notebook and updates from discussion (#8)
Adds the ConfigIntro notebook in a completed state since it has no dependencies on Hera paths and task configs.

Made a few updates after other PR comments and in-person discussions.

--- a/notebooks/Rocoto.ipynb
+++ b/notebooks/Rocoto.ipynb
@@ -49,8 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "head -n 20 $configs/rocoto_workflow.yaml "
+    "!head -n 20 $configs/rocoto_workflow.yaml "
    ]
   },
   {
@@ -90,8 +89,7 @@
    },
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "uw rocoto realize -c $configs/rocoto_workflow.yaml -o workflow.xml"
+    "!uw rocoto realize -c $configs/rocoto_workflow.yaml -o workflow.xml"
    ]
   },
   {
@@ -111,7 +109,12 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "uw config realize -i $configs/prepare_bcs.yaml -u $configs/rocoto_one_task.yaml | uw rocoto realize -o workflow.xml\n",
+    "realize_args=(\n",
+    "    -i $configs/prepare_bcs.yaml\n",
+    "    -u $configs/rocoto_one_task.yaml\n",
+    ")\n",
+    "    \n",
+    "uw config realize ${realize_args[*]} | uw rocoto realize -o workflow.xml\n",
     "cat workflow.xml"
    ]
   },
@@ -131,13 +134,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c311aed6-5edc-40d2-ac98-4bb84ec9fd73",
+   "id": "cff59e56-045d-44ed-bcdb-2688f39349cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "uw config realize -i $configs/prepare_bcs.yaml -u $configs/rocoto_with_metatask.yaml | uw rocoto realize -o workflow.xml\n",
-    "cat workflow.xml"
+    "realize_args=(\n",
+    "    -i $configs/prepare_bcs.yaml\n",
+    "    -u $configs/rocoto_with_metatask.yaml   \n",
+    ")\n",
+    "\n",
+    "uw config realize ${realize_args[*]} | uw rocoto realize -o workflow.xml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b57c3ff7-3471-48f3-8835-103f1bcf02b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat workflow.xml"
    ]
   },
   {
@@ -156,13 +173,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caeb9bea-52e8-4a3f-9bd6-c75f0e96e34d",
+   "id": "c27f3a02-4780-48a4-b510-2855ec452a1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "uw config realize -i $configs/fv3_config.yaml -u $configs/gsi_uw_config.yaml | uw config realize -u $configs/prepare_bcs.yaml | uw config realize -u $configs/rocoto_workflow.yaml | uw rocoto realize -o workflow.xml\n",
-    "cat workflow.xml"
+    "%%bash \n",
+    "uw config realize -i $configs/fv3_config.yaml -u $configs/gsi_config.yaml | \\\n",
+    "    uw config realize -u $configs/prepare_bcs.yaml | \\\n",
+    "    uw config realize -u $configs/rocoto_workflow.yaml | \\\n",
+    "    uw rocoto realize -o workflow.xml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8556a987-18a1-4f95-bd17-257c4cb1a650",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!cat workflow.xml"
    ]
   },
   {
@@ -170,9 +201,76 @@
    "id": "39a9c4ae-8b88-4ab5-9058-7d071a819133",
    "metadata": {},
    "source": [
-    "## Use Compose tool \n",
+    "## Use `compose` tool \n",
     "\n",
-    "TBD"
+    "* A helper tool that reduces the need for repeated piping.\n",
+    "* Configs increase in priority from left to right. Last one takes most precedence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9bde8ea-a0a4-436d-9dbe-d1db369b0732",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "file_list=(\n",
+    "    $configs/fv3_config.yaml\n",
+    "    $configs/gsi_config.yaml\n",
+    "    $configs/prepare_bcs.yaml\n",
+    "    $configs/rocoto_workflow.yaml\n",
+    ")\n",
+    "uw config compose ${file_list[*]} -o experiment.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50b00cb5-3b16-4204-930d-65a95a22a2b5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!cat experiment.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ef6d7ed-8e31-41b1-99ff-ac7607c56464",
+   "metadata": {},
+   "source": [
+    "### `compose` and `realize`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30ecafae-986d-4b58-a6b8-cd1ca9563f61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "file_list=(\n",
+    "    $configs/fv3_config.yaml\n",
+    "    $configs/gsi_config.yaml\n",
+    "    $configs/prepare_bcs.yaml\n",
+    "    $configs/rocoto_workflow.yaml\n",
+    ")\n",
+    "uw config compose ${file_list[*]} -o experiment.yaml --realize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fcda07f-70aa-43d0-a88c-a8429f099414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat experiment.yaml"
    ]
   },
   {
@@ -228,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
