Idempotence demo for fs mode (#10)

--- a/notebooks/YAML.ipynb
+++ b/notebooks/YAML.ipynb
@@ -32,6 +32,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56925064-af75-4f89-b384-8b8ddd08d837",
+   "metadata": {},
+   "source": [
+    "**Note:** The examples that follow call a helper script, `realize`, from the code cells. The actual `uw` commands are shown in the output cells, preceded by `+`, and can be replicated in a shell when run from the `configs/` directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b947b1ee-8531-45dc-80f3-a454cb6580bc",
    "metadata": {},
    "source": [
