Install notebook update (#13)
Co-authored-by: Paul Madden <136389411+maddenp-cu@users.noreply.github.com>

--- a/notebooks/01BuildInstall.ipynb
+++ b/notebooks/01BuildInstall.ipynb
@@ -8,9 +8,7 @@
    "source": [
     "# Getting started\n",
     "\n",
-    "The training will run a simplified cycled data assimilation workflow using **FV3** and **GSI** from the **rrfs-workflow repository**. These executables have been built on NOAA's RDHPCS **Hera** platform and are available for common use. There is no need to repeat the process for the purposes of this tutorial.\n",
-    "\n",
-    "For posterity, the build process is documented at the end of this page.  "
+    "This training will run a simplified, cycled data assimilation workflow using **FV3** and **GSI** from the **rrfs-workflow repository**. These executables have been built on NOAA's RDHPCS **Hera** platform and are available for common use. There is no need to repeat the build process for the purposes of this tutorial. For posterity, the build process is documented at the end of this page.  "
    ]
   },
   {
@@ -20,7 +18,7 @@
    "source": [
     "# Getting the tutorial code \n",
     "\n",
-    "The tutorial repository includes several extras for running the examples used in the live demos. To obtain an interactive copy on Hera, do the following in an area on scratch disk where you have plenty of space:"
+    "The tutorial repository includes several extras for running the examples used in the live demos. To obtain an interactive copy on Hera, do the following in a scratch-disk area where you have plenty of space:"
    ]
   },
   {
@@ -41,7 +39,7 @@
    "source": [
     "# Using the pre-installed conda environment\n",
     "\n",
-     "Run the following commands in a fresh bash shell to activate the conda environment for the training. If another conda is already activated (for example via login scripts), unload it first.\n"
+    "Run the following commands in a fresh bash shell to activate the conda environment for the training. If another conda installation and/or environment is already activated (for example, via login scripts), unload it first.\n"
    ]
   },
   {
@@ -54,7 +52,7 @@
     "%%bash\n",
     "source /scratch3/BMC/wrfruc/cholt/conda/etc/profile.d/conda.sh\n",
     "conda activate\n",
-    "conda activate DEV-uwtools # This will need to change before the tutorial!"
+    "conda activate uwtools-training"
    ]
   },
   {
@@ -62,7 +60,7 @@
    "id": "f4e2e69f-ce0a-4f89-b909-e914f5ed8263",
    "metadata": {},
    "source": [
-    "# Build the code (no need to run these commands)\n",
+    "# Building the code (no need to run these commands)\n",
     "\n",
     "Note: The code in the provided branch originates from the main branch of the authoritative repository as of Friday, August 8, 2025. The module file for Hera has been modified such that the scientific integrity of the output cannot be guaranteed, but it should work for demonstration purposes. "
    ]
