Driver Overview notebook (#14)

--- a/notebooks/02ConfigIntro.ipynb
+++ b/notebooks/02ConfigIntro.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "# Running Realize\n",
     "\n",
-    "* Default format is YAML when format isn't provided and cannot be deduced.\n",
+    "* Default format is YAML when format isn't provided and cannot be deduced from the filename extension.\n",
     "* Supported formats also include INI, Fortran Namelist, Bash.\n",
     "* Can transform between compatible formats. All formats can be transformed to YAML.\n",
     "  "
