--- a/notebooks/03YAML.ipynb
+++ b/notebooks/03YAML.ipynb
@@ -13,7 +13,7 @@
    "id": "e9402c4d-d9f5-4b65-a88c-86f7aabfb065",
    "metadata": {},
    "source": [
-    "Set up our `PATH` so we can use the `realize` script:"
+    "Set up our `PATH` so we can use the `realize` script, and `cd` to the `configs/` directory:"
    ]
   },
   {
