--- a/notebooks/04Filesystem.ipynb
+++ b/notebooks/04Filesystem.ipynb
@@ -13,7 +13,7 @@
    "id": "e627442e-1e5d-4601-8ef7-a272fb0ce0e8",
    "metadata": {},
    "source": [
-    "Set up our `PATH` so we can use the `fsdemo` script:"
+    "Set up our `PATH` so we can use the `fsdemo` script, and `cd` to the `configs/` directory:"
    ]
   },
   {
@@ -26,7 +26,8 @@
     "import os\n",
     "d = \"../bin\"\n",
     "if d not in os.environ[\"PATH\"].split(\":\"):\n",
-    "    os.environ[\"PATH\"] += f\":{d}\""
+    "    os.environ[\"PATH\"] += f\":{d}\"\n",
+    "os.chdir(\"../configs\")"
    ]
   },
   {
@@ -72,12 +73,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "+ uw fs link -c ../configs/fs00.yaml --key-path to_link --cycle 2025-09-21T12 --leadtime 6\n",
-      "[2025-09-22T13:17:53]     INFO Validating config against internal schema: files-to-stage\n",
-      "[2025-09-22T13:17:53]     INFO Schema validation succeeded for fs config\n",
-      "[2025-09-22T13:17:53]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Executing\n",
-      "[2025-09-22T13:17:53]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Ready\n",
-      "[2025-09-22T13:17:53]     INFO File links: Ready\n"
+      "+ uw fs link -c fs00.yaml --key-path to_link --cycle 2025-09-21T12 --leadtime 6\n",
+      "[2025-09-22T17:28:57]     INFO Validating config against internal schema: files-to-stage\n",
+      "[2025-09-22T17:28:57]     INFO Schema validation succeeded for fs config\n",
+      "[2025-09-22T17:28:57]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Executing\n",
+      "[2025-09-22T17:28:57]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Ready\n",
+      "[2025-09-22T17:28:57]     INFO File links: Ready\n"
      ]
     }
    ],
@@ -85,6 +86,14 @@
     "%%bash\n",
     "rm -rf /tmp/fsdemo\n",
     "fsdemo fs00 link --key-path to_link --cycle 2025-09-21T12 --leadtime 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b1bc7e9-2708-4171-bd4c-6a74c39e26a7",
+   "metadata": {},
+   "source": [
+    "Nothing to do:"
    ]
   },
   {
@@ -97,14 +106,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T13:17:53]     INFO Validating config against internal schema: files-to-stage\n",
-      "[2025-09-22T13:17:53]     INFO Schema validation succeeded for fs config\n",
-      "[2025-09-22T13:17:53]     INFO File links: Ready\n"
+      "[2025-09-22T17:28:58]     INFO Validating config against internal schema: files-to-stage\n",
+      "[2025-09-22T17:28:58]     INFO Schema validation succeeded for fs config\n",
+      "[2025-09-22T17:28:58]     INFO File links: Ready\n"
      ]
     }
    ],
    "source": [
     "!uw fs link -c ../configs/fs00.yaml --key-path to_link --cycle 2025-09-21T12 --leadtime 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "accf4331-409d-46e2-8d1d-25cf0e6a4b51",
+   "metadata": {},
+   "source": [
+    "But delete an output file and subsequent invocation will replace it:"
    ]
   },
   {
@@ -124,11 +141,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T13:17:54]     INFO Validating config against internal schema: files-to-stage\n",
-      "[2025-09-22T13:17:54]     INFO Schema validation succeeded for fs config\n",
-      "[2025-09-22T13:17:54]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Executing\n",
-      "[2025-09-22T13:17:54]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Ready\n",
-      "[2025-09-22T13:17:54]     INFO File links: Ready\n"
+      "[2025-09-22T17:28:58]     INFO Validating config against internal schema: files-to-stage\n",
+      "[2025-09-22T17:28:58]     INFO Schema validation succeeded for fs config\n",
+      "[2025-09-22T17:28:58]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Executing\n",
+      "[2025-09-22T17:28:58]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Ready\n",
+      "[2025-09-22T17:28:58]     INFO File links: Ready\n"
      ]
     }
    ],
